# openmp-area

./: .gitignore  CMakeLists.txt  area.hpp  gen_polygon.py  main.cpp  run-benchmark.sh  test.cpp
